# Project-Axiom

./: .env.example  .gitignore  PROJECT_TRACKER.md  Project Axiom Updated Spec.md  README.md  pyproject.toml
axiom/: __init__.py  analysis.py  branding.py  cli.py  document_plan.py  graph.py  io.py  llm.py  pipeline.py  planning.py  profiling.py  rendering.py  sandbox.py  self_healing.py  semantics.py  state.py  visual_history.py  visualizations.py
sample_data/: axiom_brand_guideline.md  sales_sample.csv
scripts/: build_e2b_template.py
tests/: test_pipeline.py
