[project]
name = "project-axiom"
version = "0.1.0"
description = "Project Axiom MVP: an autonomous BI pipeline for data profiling, analysis, and report generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "fpdf2>=2.7.9",
    "langchain-core>=1.3.0",
    "langgraph>=0.2.0",
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "python-pptx>=0.6.23",
    "seaborn>=0.13.2",
    "XlsxWriter>=3.2.0",
]

[project.scripts]
axiom = "axiom.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["axiom*"]
